Revert to java 8 and add windows(java) binary